# DeckResolution

./: CMakeLists.txt  main.cpp  simple.json
